<resources>
    <!--<string name="app_name">TourStampRally</string>-->
    <string name="app_name">BSR</string>
    <string name="forget_password">비밀번호를 잊으셨나요?</string>
    <string name="auto_login">자동 로그인</string>
    <string name="save_id">아이디 저장</string>
    <string name="DoNotHaveID">계정이 없으신가요?</string>
    <string name="gotoSignin">회원가입 하기</string>
    <string name="login">로그인</string>

    <string name="termsofconditions">이용약관</string>
    <string name="service_terms">서비스 이용약관</string>
    <string name="personal_info">개인정보 취급 방침</string>
    <string name="agree_service_term">서비스 이용약관에 동의합니다.</string>
    <string name="agree_personal_term">개인정보 취급 방침</string>


    <string name="next">다음</string>
    <string name="all_agree">전체동의</string>

    <string name="signUp">회원가입</string>
    <string name="phone">연락처</string>
    <string name="AuthenticationRequest">인증요청</string>
    <string name="inputphone">-없이 입력해주세요</string>
    <string name="inputAuth">인증번호 입력</string>

    <string name="inputphoneNumbar">핸드폰번호를 입력해 주세요.</string>


    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="input_password_confirm">비밀번호를 다시 한번 입력해주세요</string>

    <string name="input_change_psw">변경할 비밀번호를 입력해주세요</string>
    <string name="input_change_pswcirn">변경할 비밀번호를 다시 입력해주세요</string>

    <string name="input_find_password">비밀번호 변경</string>
    <string name="explan_find_password">비밀번호를 찾기 위해 필요한 정보를 정확하게 입력해주세요.</string>

    <string name="name">이름</string>
    <string name="input_name">이름을 입력해 주세요</string>

    <string name="email">E-mail</string>
    <string name="input_email">E-mail을 입력해주세요</string>

    <string name="location_ko">지역</string>
    <string name="location">location</string>
    <string name="busan">부산광역시</string>
    <string name="seoul">서울특별시</string>


    <string name="stemp_rally_location">스탬프 랠리 구역</string>
    <string name="coupon_exchange">쿠폰 교환</string>
    <string name="watch_review">리뷰 보기</string>


    <string name="more_btn">더보기 ></string>


    <string name="check">확인</string>
    <string name="cancle">취소</string>
    <string name="back">back</string>


    <string name="nfc_scan">NFC 스캔</string>

    <string name="tourist_guid">관광지 길안내</string>
    <string name="shop_guid">매장 길안내</string>

    <string name="change"><u>회원탈퇴</u></string>


    <string name="account_admin">계정관리</string>
    <string name="notice">공지사항</string>
    <string name="coupon_list">쿠폰현황</string>
    <string name="notify_setting">알림설정</string>
    <string name="bascet_list">찜한목록</string>
    <string name="logout">로그아웃</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_service_dialog">원하는 서비스를 선택해주세요</string>
    <string name="more_tour">관광지 자세히 보기</string>
    <string name="nfcscan">NFC 스캔</string>
    <string name="qrscan">QR코드 스캔</string>
    <string name="navi">내비</string>
    <string name="view_spotpoint">상세 위치 보기</string>
    <string name="explain_guid_location">인기 관광지를 만나보세요!</string>

    <string name="kakaoNativeAppKey">e8301ff2af31ff1516d8e761cbcadd1b</string>
    <string name="save">저장</string>
    <string name="backimv">back icon</string>
    <string name="backgroundImage">background Image</string>
    <string name="fail_sms">SMS발송 요청을 실패하였습니다.</string>
    <string name="user_withdrawal">지금까지 BSR 서비스를 이용해주셔서 감사합니다. \n 회원을 탈퇴하면 BSR 서비스 내 나의 계정 정보 및 \n 기록 내역이 삭제 되고 복구 할 수 없습니다.</string>
    <string name="imagree">위 내용을 숙지하였으며, 동의합니다.</string>
    <string name="home">홈</string>
    <string name="store">매장</string>
    <string name="report">기록</string>
    <string name="stamp">스탬프</string>
    <string name="camera">카메라</string>
    <string name="profile">profile</string>
    <string name="menu">menu</string>
    <string name="mainlogo">MainLogo</string>
    <string name="logo">Logo</string>
    <string name="see_detail">상세보기</string>
    <string name="close">close</string>
    <string name="image">image</string>
    <string name="photo">photo</string>
    <string name="coupon">쿠폰</string>
    <string name="arrow">arrow</string>
    <string name="like">like</string>
    <string name="report_ko">신고하기</string>
    <string name="plzChooseReportCause">신고사유를 선택해주세요.</string>
    <string name="search">search</string>
    <string name="plz_search_tour">관광지를 검색해주세요.</string>
    <string name="popular">popular</string>
    <string name="heart">heart</string>
    <string name="zero">0</string>
    <string name="participants">참여자</string>
    <string name="justDiv">|</string>
    <string name="zero_percent">0%</string>
    <string name="restaurant">식당</string>
    <string name="all">전체</string>
    <string name="around">주변</string>
    <string name="course">코스별</string>
    <string name="id">아이디</string>
    <string name="cafe">카페</string>

</resources>