<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainfragment"
        android:enabled="true"
        android:icon="@drawable/home_ic"
        android:title="@string/home"
        />

    <item
        android:id="@+id/page_store"
        android:enabled="true"
        android:icon="@drawable/store_ic"
        android:title="@string/store"
        />

    <item
        android:id="@+id/page_report"
        android:enabled="true"
        android:icon="@drawable/folder_ic"
        android:title="@string/report"
        />

    <item
        android:id="@+id/camera"
        android:enabled="true"
        android:icon="@drawable/menu_camera"
        android:title="@string/camera"
        />

    <item
        android:id="@+id/fragment_qr_scan"
        android:enabled="true"
        android:icon="@drawable/report_ic"
        android:title="@string/stamp"
        />

</menu>