<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="activity"
            type="com.sdin.tourstamprally.FindPasswordActivity" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_find_password"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageButton
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:contentDescription="@string/back"
                    android:src="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/input_find_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>

            <View
                android:id="@+id/line_terms"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/explan_find_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/explan_find_password" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_rounded_01"
                android:inputType="textPersonName"
                android:hint="@string/input_name"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_rounded_01"
                android:inputType="phone"
                android:hint="@string/inputphoneNumbar"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_rounded_01"
                android:hint="@string/input_email"
                android:inputType="textWebEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:importantForAutofill="no" />

        </LinearLayout>


        <Button
            android:id="@+id/find_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/bg_rounded_04"
            android:gravity="center"
            android:text="@string/input_find_password"
            android:textColor="@color/white"
            android:onClick="@{ () -> activity.findPsw()}"
            />


    </RelativeLayout>

</layout>