<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.sdin.tourstamprally.ui.activity.MainActivity2" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/popup_buttonColor">

            <ImageView
                android:id="@+id/logo_main_toolbar"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/mainlogo"
                android:src="@drawable/ic_main_fragment_logo_ic"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="@dimen/_37sdp"
                android:layout_height="@dimen/_37sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/back"
                android:onClick="@{()-> activity.backBtnClick()}"
                tools:src="@drawable/back_ic_resize" />
            <!--@drawable/ic_backspace_white_24-->

            <TextView
                android:id="@+id/title_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/back_btn"
                tools:text="@string/nfc_scan"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />


            <ImageButton
                android:id="@+id/tap_imb"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/menu"
                android:onClick="@{() -> activity.openDrawer()}"
                tools:src="@drawable/ic_menu_white" />
            <!--android:src="@drawable/ic_hamburger_white_24"-->


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>